--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ spring.datasource.password=34386789009d
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.profiles.active=test
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.web.resources.static-locations=classpath:/static/
+
+
+
+
 
 
