--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-# MySQL properties
 spring.datasource.url=jdbc:mysql://localhost:3306/users1?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=34386789009d
-# Hibernate properties
+
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.web.resources.static-locations=classpath:/static/
+ring.jpa.open-in-view=false
 
 
 
